--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: dynamicGP
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: dynamicGP - integration of Dynamic Mode Decomposition with Genomic Prediction
+Version: 1.0.0.0
 Authors@R: 
     person("David", "Hobby", , "hobby@uni-potsdam.de", role = "aut")
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Maintainer: David Hobby <hobby@uni-potsdam.de>
+Description: Finds A, A_r and intermediate matrices from Algorithm 1 and 2 from paper "Dynamics of plant phenome can be accurately predicted from genetic markers"
+License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
