--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: dynamicGP
 Title: dynamicGP - integration of Dynamic Mode Decomposition with Genomic Prediction
 Version: 1.0.0.0
 Authors@R: 
-    person("David", "Hobby", , "hobby@uni-potsdam.de", role = "aut")
+    person("David", "Hobby", "hobby@uni-potsdam.de", role = "aut")
 Maintainer: David Hobby <hobby@uni-potsdam.de>
 Description: Finds A, A_r and intermediate matrices from Algorithm 1 and 2 from paper "Dynamics of plant phenome can be accurately predicted from genetic markers"
 License: `use_mit_license()`
